gl33-master/src/test/deca/syntax/valid/others/expected/semiEnPlus.lxr
'{': [@0,194:194='{',<13>,9:0]
'print': [@1,200:204='print',<23>,10:4]
'(': [@2,205:205='(',<11>,10:9]
STRING: [@3,206:212='"Hello"',<45>,10:10]
')': [@4,213:213=')',<12>,10:17]
';': [@5,214:214=';',<16>,10:18]
';': [@6,215:215=';',<16>,10:19]
'}': [@7,217:217='}',<14>,11:0]
