gl33-master/src/test/deca/syntax/invalid/others/expected/doubleQuotesNonFermes.lxr
'{': [@0,180:180='{',<13>,9:0]
'print': [@1,186:190='print',<23>,10:4]
'(': [@2,191:191='(',<11>,10:9]
INFO  fr.ensimag.deca.syntax.DecacErrorListner.syntaxError(DecacErrorListner.java:50) - no token, no LocationException => using input.getSourceName(): line=10
src/test/deca/syntax/invalid/others/doubleQuotesNonFermes.deca:10:10: token recognition error at: '"hello);  \n}\n'
